--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
     "contentful": "^7.4.3",
+    "material-ui-datatables": "^0.18.2",
+    "mui-datatables": "^2.0.0-beta.59",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-phone-number-input": "^2.3.8",
